@@ -38,6 +38,8 @@
 <p>2015-04-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/map.c (ReadMAPImage): Allocate pixels after return case
+for 'ping' mode.</li>
 <li>magick/floats.c (_Gm_convert_fp16_to_fp32)
 (_Gm_convert_fp24_to_fp32): Fix Coverity 10094 &quot;Logically dead
 code&quot;.</li>
