@@ -1,5 +1,8 @@
 2015-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/map.c (ReadMAPImage): Allocate pixels after return case
+	for 'ping' mode.
+
 	* magick/floats.c (_Gm_convert_fp16_to_fp32)
 	(_Gm_convert_fp24_to_fp32): Fix Coverity 10094 "Logically dead
 	code".
